syntax = "proto3";
package pb;
option go_package = "./pb";

// this is a comment 
message PlayerSelectData{
    //具体的阵营选择还没写
    int32 faction = 4;

    bool isSelectDone = 5;
    bool allSelectDone =6;

  }

  
message SelectData{

    string playerName = 2;
    
    string chatMes = 3;
    int32 faction = 6;
    bool isReady = 7;

  }

 message PbMessage {
  string name = 1;
  enum CMD {

    login = 0;
    match = 1;
    room = 2;
    fight = 3;
    chat = 4;
    fightEnd = 5;
  }
  CMD cmd = 2;

  enum CmdMatch{
    joinMatch = 0;
    quitMatch = 1;
   
  }
  CmdMatch cmdMatch = 3;

  enum CmdRoom{
    
    confirm = 0;
    select = 1;
    selectDate = 2;
    load = 3;
    loadData = 4;

    fightStart = 5;
    
    fightOp = 6;
    dismissed = 7;
  }
  CmdRoom cmdRoom = 4;
  //index代表在房间的索引
  int32 index = 5;

  string chatMes = 11;

  


  
  

  

 
  SelectData selectData = 6;

  int32 loadPercent = 7;

  int32 frameId = 8;

  FightMessage SendFightMessage = 9;

  repeated FightMessage fightMessage = 10;

}

message FightMessage{

  enum BattleCMD{
    move = 0;
    fight = 1;
    interact = 2;
  }
  BattleCMD battleCMD = 1;

  repeated int32 selectedUnit = 3;
  // move
  repeated int32 endPos = 4;
  //fight
  int32 enemyUnit = 5;
  //interact
  int32 interactObject = 6;

}


// protoc --go_out=./ ./Protobuf.proto
